--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <div class="">
         <!-- nav -->
-        <nav class="bg-yellow shadow dark:bg-gray-800">
+        <nav class="bg-yellow shadow">
             <div class="container px-6 py-3 w-[90%] mx-auto">
                 <div class="flex flex-col md:flex-row md:justify-between md:items-center">
                     <!-- Mobile Menu open: "block", Menu closed: "hidden" -->
@@ -181,7 +181,7 @@
                             ship, and process payments everywhere</p>
                         <div class="flex flex-col my-8 space-y-3  sm:space-y-0 sm:flex-row sm:justify-center sm:-mx-2">
                             <input id="email" type="text"
-                                class="px-4 py-2 md:w-[70%] text-gray-900 bg-white border rounded-md sm:mx-2 dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600 focus:border-light-green focus:outline-none focus:ring focus:border-light-green focus:ring-opacity-40"
+                                class="px-4 py-2 md:w-[70%] text-gray-900 bg-white border rounded-md sm:mx focus:border-light-green focus:outline-none focus:ring focus:border-light-green focus:ring-opacity-40"
                                 placeholder="Enter your email Address">
                             <button
                                 class="px-4 py-2 text-sm font-medium tracking-wide text-white capitalize transition-colors duration-200 transform bg-light-green rounded-md sm:mx-2 hover:bg-dark-green focus:outline-none focus:bg-dark-green">
